tests/type-errors/invalid_rational_literal_int.arl
archetype invalid_rational_literal_int

variable r : rational = 2 / 0i
